[package]
name = "hello_deno"
version = "0.1.0"
authors = ["eathon <yyye33@yahoo.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core="0.49.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
